Docs frontpage enhancements

--- a/docs/styles/highlight.js/default.css
+++ b/docs/styles/highlight.js/default.css
@@ -106,7 +106,7 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 .asciidoc .hljs-attribute,
 .lasso .hljs-attribute,
 .coffeescript .hljs-property,
-.makefile .phony {
+.hljs-phony {
   color: #88F
 }
 
@@ -149,5 +149,5 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 .xml .vbscript,
 .xml .css,
 .xml .hljs-cdata {
-  opacity: 0.5;
+  opacity: 0.75;
 }
