--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ noscript p{
     width: 700px;
 }
 
-h1 { font-size: 3.8em; color: #700; margin: 0 3px 0.5em 3px; }
+h1 { font-size: 3.8em; color: #700; margin: 17px 3px 0.5em 3px; }
 h1 .small { font-size: 0.4em; }
 h1 a { text-decoration: none }
 h1 .version {
@@ -60,6 +60,10 @@ ul { list-style: none; padding: 0px 4em; }
 ul ul, 
 .square-list {
     list-style: square
+}
+
+.logo {
+    float: left;
 }
 
 a { color: #800; }
