--- a/docs/styles/jsdoc-openseadragon.css
+++ b/docs/styles/jsdoc-openseadragon.css
@@ -69,8 +69,7 @@ section
     display: none;
 }
 
-.optional:after {
-    content: "opt";
+.signature-attributes {
     font-size: 60%;
     color: #aaa;
     font-style: italic;
