--- a/docs/styles/jsdoc-openseadragon.css
+++ b/docs/styles/jsdoc-openseadragon.css
@@ -20,7 +20,7 @@ body
     overflow: auto;
 }
 
-.source-code 
+.source-code
 {
 }
 
@@ -159,8 +159,12 @@ h3
     font-size: 150%;
     font-weight: bold;
     letter-spacing: -0.01em;
-    margin-top: 16px;
+    /* margin-top: 16px; */
     margin: 6px 0 3px 0;
+}
+
+article h3 {
+  margin-top: 32px;
 }
 
 h4
@@ -270,7 +274,7 @@ h6
     list-style-type:none;
 }
 
-.toc li 
+.toc li
 {
     margin-top: 3px;
 }
